Fix footnote `sup` number wrapping.

--- a/assets/styles/partials/_main.scss
+++ b/assets/styles/partials/_main.scss
@@ -131,10 +131,11 @@
 	sup {
 		--typography--scale: 0.9; // Optical.
 
+		display:           inline; // To keep with previous.
+		line-height:       initial; // Otherwise vertical-align borks.
 		margin-left:       0.25em;
 		scroll-margin-top: var(--link--scroll-margin);
-		transform:         translateY(calc(-1 * var(--typography--x) / var(--typography--scale)));
-		// Sat on the Verdana x-height.
+		vertical-align:    super;
 
 		> a {
 			@extend %typography--underline--disable;
